--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 set(CMAKE_CUDA_COMPILER "/usr/local/cuda-10.0/bin/nvcc")
+# add line below to run on the GH200
+set(CMAKE_CUDA_ARCHITECTURES 90)
 cmake_minimum_required(VERSION 3.8)
 project(Annealer LANGUAGES C CXX CUDA)
 
